--- a/static/styles.css
+++ b/static/styles.css
@@ -6,3 +6,11 @@
 h2 {
     color: gray
 }
+.projectPic {
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.projectPic:hover {
+  -webkit-transform: scale(1.10, 1.10);
+  transform: scale(1.10, 1.10);
+}
