--- a/static/styles.css
+++ b/static/styles.css
@@ -11,3 +11,25 @@ h2 {
         flex-direction: column;
     }
 }
+.profile {
+}
+.projectPic {
+
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.projectPic:hover {
+  -webkit-transform: scale(1.10, 1.10);
+  transform: scale(1.10, 1.10);
+}
+
+@-webkit-keyframes pulsate{
+    0%{
+        -webkit-transform: scale(1);
+    }
+    50%{
+        -webkit-transform: scale(1.1);
+    }
+  100%{ 
+        -webkit-transform: scale(1);
+    }
+}
