--- a/static/styles.css
+++ b/static/styles.css
@@ -1,35 +1,32 @@
+body {
+  transition: background-color 0.2s ease 0s, color 0.2s ease 0s;
+  font-family: roboto;
+}
+
+.label {
+  font-size: 30px;
+}
+
+i {
+  padding: 0px 10px 0px 10px;
+}
+
+.profile {
+  border-radius: 50%;
+  height: 200px;
+  box-shadow: 0px 24px 50px -15px rgba(0, 0, 0, 0.6);
+}
+
 .sLink {
-    text-decoration: none;
-    color: #000000;
+  text-decoration: none;
+  color: #000000;
 }
 
 h2 {
-    color: gray
+  color: gray;
 }
-@media (max-width: 1200px){
-    .skills {
-        flex-direction: column;
-    }
-}
-.profile {
-}
-.projectPic {
-
-    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-.projectPic:hover {
-  -webkit-transform: scale(1.10, 1.10);
-  transform: scale(1.10, 1.10);
-}
-
-@-webkit-keyframes pulsate{
-    0%{
-        -webkit-transform: scale(1);
-    }
-    50%{
-        -webkit-transform: scale(1.1);
-    }
-  100%{ 
-        -webkit-transform: scale(1);
-    }
+@media (max-width: 1200px) {
+  .skills {
+    flex-direction: column;
+  }
 }
