--- a/static/styles.css
+++ b/static/styles.css
@@ -1,32 +1,20 @@
+html {
+  box-sizing: border-box;
+}
+* {
+  box-sizing: inherit;
+}
+
 body {
-  transition: background-color 0.2s ease 0s, color 0.2s ease 0s;
-  font-family: roboto;
+  transition: 0.2s ease 0s, color 0.2s ease 0s;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: black;
+  color: white;
+  margin: 50px 20px 50px 20px;
 }
 
-.label {
-  font-size: 30px;
+.changeColor {
+  background: white;
+  color: black;
 }
 
-i {
-  padding: 0px 10px 0px 10px;
-}
-
-.profile {
-  border-radius: 50%;
-  height: 200px;
-  box-shadow: 0px 24px 50px -15px rgba(0, 0, 0, 0.6);
-}
-
-.sLink {
-  text-decoration: none;
-  color: #000000;
-}
-
-h2 {
-  color: gray;
-}
-@media (max-width: 1200px) {
-  .skills {
-    flex-direction: column;
-  }
-}
