--- a/static/styles.css
+++ b/static/styles.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  transition: 0.2s ease 0s, color 0.2s ease 0s;
+  transition: 1s background-color 0s, color 0.2s ease 0s;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background: black;
   color: white;
