--- a/static/styles.css
+++ b/static/styles.css
@@ -6,8 +6,8 @@ html {
 }
 
 body {
-  transition: 1s background-color 0s, color 0.2s ease 0s;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  transition: 500ms background-color 0s, color 0.2s ease 0s;
+  font-family: roboto;
   background: black;
   color: white;
   margin: 50px 20px 50px 20px;
